<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".StundenPopOver">


    <View
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="@color/black"
        android:backgroundTint="#5959AD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FertigButtonStundenPopOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/roundresource"
        android:backgroundTint="@color/white"
        android:text="Fertig"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <TextView
        android:id="@+id/hoursDetailTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/roundresource"
        android:gravity="center"
        android:text="Hier findest du bald deine Hausaufgaben \n für die Stunde"
        android:textColor="@color/black"
        android:backgroundTint="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursDetailTeacherTextView" />

    <TextView
        android:id="@+id/hoursDetailSubjectTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:text="@string/fach"
        android:textColor="#5959AD"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hoursDetailDayTextView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/am_tag"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursDetailSubjectTextView" />


    <TextView
        android:id="@+id/hoursDetailDateTextView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:layout_marginLeft="30dp"
        android:text="Date"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        app:layout_constraintStart_toEndOf="@+id/hoursDetailDayTextView"
        app:layout_constraintTop_toTopOf="@+id/hoursDetailDayTextView" />


    <TextView
        android:id="@+id/hoursDetailRoomTextView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/roundresource"
        android:backgroundTint="#E6E6E6"
        android:gravity="center"
        android:text="@string/raum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hoursDetailTeacherTextView"
        android:layout_width="230dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/roundresource"
        android:backgroundTint="#E6E6E6"
        android:gravity="center"
        android:text="@string/lehrer"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/uhrzeit_bis_uhrzeit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>